--- a/milestone3/static/css/style.css
+++ b/milestone3/static/css/style.css
@@ -122,9 +122,6 @@ body > main > div > div:nth-child(2) > div.col > table {
 
 body > main > div > div:nth-child(2) > div.col {
     left: 50px;
-    /* transform: translateX(50%);
-    left: -50%;
-    background-color: brown; */
 }
 
 .bannersm {
@@ -213,7 +210,7 @@ div.col.s2 {
 }
 
 .icon-size {
-    color: #000;
+    color: rgb(255, 255, 255);
     padding-top: 20px;
     margin: 0 4vw;
     font-size: 35px;
@@ -230,7 +227,6 @@ div.col.s2 {
 }
 
 .footer-left {
-    text-align: left;
     color: #fff;
     padding-top: 15px;
     font-size: 0.8rem;
@@ -238,13 +234,13 @@ div.col.s2 {
 .social-bottom {
     height: 40px;
     text-align: center;
-    padding-top: 10px;
+    padding-top: 20px;
 }
 
 footer {
     width: 100%;
     background-color: darkblue;
-    height: 100px;
+    height: 110px;
     bottom: 0;
     line-height: 1px;
 }
@@ -252,13 +248,57 @@ footer {
 .format {
     display: inline-flex;
     left: 50%;
-    transform: translateX(0%);
+    transform: translateX(35%);
 }
 
 .follow {
-    width: 100%;
+    color: aliceblue;
     align-items: center;
     position: relative;
-    top: 0;
-    right: 0;
+    top: 10px;
+    right: 0px;
+}
+a.left {
+    color: #fff;
+    padding-top: 5px;
+    height: 80px;
+    width: 100%;
+    left: 50%;
+    transform: translateX(15%);
+}
+
+a.right.padleft {
+    color: skyblue;
+}
+
+p.telephone {
+    width: 100%;
+    height: 20px;
+    left: 50%;
+    transform: translateX(15%);
+}
+
+.sidenav-overlay{opacity: 0;
+height: 100vh;}
+
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+.card {
+    border-radius: 15px;
+}
+
+.phone-text {
+    color: #fff;
+}
+#stepTitle > div:nth-child(4) {
+    padding-left: 35%;
+    display: inline-flex;
+}
+body > main > div:nth-child(5) > div:nth-child(3){
+    padding-left: 35%;
+    display: inline-flex;
 }
