--- a/milestone3/templates/base.html
+++ b/milestone3/templates/base.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
-        integrity="sha512-xA6Hp6oezhjd6LiLZynuukm80f8BoZ3OpcEYaqKoCV3HKQDrYjDE1Gu8ocxgxoXmwmSzM4iqPvCsOkQNiu41GA==" crossorigin="anonymous" type="text/css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
+        integrity="sha512-xA6Hp6oezhjd6LiLZynuukm80f8BoZ3OpcEYaqKoCV3HKQDrYjDE1Gu8ocxgxoXmwmSzM4iqPvCsOkQNiu41GA=="
+        crossorigin="anonymous" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+        type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     {% block styles %}
     {% endblock %}
     <title>Treatment Manager</title>
 </head>
+
 <body>
 
-	<header>
+    <header>
         <!-- top navbar -->
-		<nav class="nav-extended text-shadow topnav darken-1">
-			<div class="nav-wrapper">
-				<a href="{{ url_for('home') }}" class="brand-logo">Sports Therapy App</a>
-				<a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
-				<ul class="right hide-on-med-and-down">
+        <nav class="nav-extended text-shadow topnav darken-1">
+            <div class="nav-wrapper">
+                <a href="{{ url_for('home') }}" class="brand-logo">Sports Therapy App</a>
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
+                <ul class="right hide-on-med-and-down">
                     {% if session.user %}
                     {% if session.user|lower != "gadmin"|lower %}
                     <li><a href="{{ url_for('profile', username=session['user']) }}">Booking</a></li>
@@ -30,48 +34,48 @@
                     <li><a href="{{ url_for('report') }}">Report</a></li>
                     {% endif %}
                     <li><a href="{{ url_for('get_treatments') }}">Treatments</a></li>
-                        <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+                    <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                     {% else %}
-                        <li><a href="{{ url_for('login') }}">Log In</a></li>
-                        <li><a href="{{ url_for('register') }}">Register</a></li>
+                    <li><a href="{{ url_for('login') }}">Log In</a></li>
+                    <li><a href="{{ url_for('register') }}">Register</a></li>
                     {% endif %}
-				</ul>
-			</div>
-		</nav>
+                </ul>
+            </div>
+        </nav>
 
         <!-- mobile sidenav -->
-		<ul class="sidenav" id="mobile-demo">
-		    <li>
-		        <h4 class="center-align brown-text text-darken 4">Sports Therapy App</h4>
-		    </li>
-		    {% if session.user %}
-		        {% if session.user|lower != "gadmin"|lower %}
-		            <li><a href="{{ url_for('profile', username=session['user']) }}">Booking</a></li>
-		        {% endif %}
-		        {% if session.user|lower == "gadmin"|lower %}
-                    <li><a href="{{ url_for('get_clients') }}">Manage Clients</a></li>
-                    <li><a href="{{ url_for('add_treatment') }}">New Treatment</a></li>
-                    <li><a href="{{ url_for('report') }}">Report</a></li>
-		        {% endif %}
-                    <li><a href="{{ url_for('get_treatments') }}">Treatments</a></li>
-                    <li><a href="{{ url_for('logout') }}">Log Out</a></li>
-		    {% else %}
-                <li><a href="{{ url_for('login') }}">Log In</a></li>
-                <li><a href="{{ url_for('register') }}">Register</a></li>
-		    {% endif %}
-		</ul>
-	</header>
+        <ul class="sidenav" id="mobile-demo">
+            <li>
+                <h4 class="center-align blue-grey-text text-darken 4">Sports Therapy App</h4>
+            </li>
+            {% if session.user %}
+            {% if session.user|lower != "gadmin"|lower %}
+            <li><a href="{{ url_for('profile', username=session['user']) }}">Booking</a></li>
+            {% endif %}
+            {% if session.user|lower == "gadmin"|lower %}
+            <li><a href="{{ url_for('get_clients') }}">Manage Clients</a></li>
+            <li><a href="{{ url_for('add_treatment') }}">New Treatment</a></li>
+            <li><a href="{{ url_for('report') }}">Report</a></li>
+            {% endif %}
+            <li><a href="{{ url_for('get_treatments') }}">Treatments</a></li>
+            <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+            {% else %}
+            <li><a href="{{ url_for('login') }}">Log In</a></li>
+            <li><a href="{{ url_for('register') }}">Register</a></li>
+            {% endif %}
+        </ul>
+    </header>
 
     <section>
         <!-- flash messages -->
         {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                {% for message in messages %}
-                    <div class="row flashes">
-                        <h4 class="lighten-4 center-align">{{ message }}</h4>
-                    </div>
-                {% endfor %}
-            {% endif %}
+        {% if messages %}
+        {% for message in messages %}
+        <div class="row flashes">
+            <h4 class="lighten-4 center-align">{{ message }}</h4>
+        </div>
+        {% endfor %}
+        {% endif %}
         {% endwith %}
     </section>
 
@@ -99,16 +103,14 @@
                         <p>Seedbed Business Centre,</p>
                         <p>Vanguard Way,</p>
                         <p>Shoeburyness,</p>
-                        <p>SS3 0JB</p>
-                    </a>
-                    <br>
-                    <p><i class=""></i><a class="" href="Tel:01702382390"> 01702 382390</a></p>
+                        <p>SS3 0JB</p></a>
+
+                    <p class="telephone" ><i class="fas fa-phone"></i><a class="phone-text" href="Tel:01702382390"> 01702 382390</a></p>
                 </div>
                 <!--Footer Right-->
                 <div class="col s6 format">
-                    <div class="follow">Follow us on</h5>
                     <div class="footer-text-right">
-                        
+
                         <div class="social-bottom">
                             <!--The link is the current Facebook address used by Balanced Training-->
                             <a class="icon-link" href="https://facebook.com/BalancedPTS/" target="_blank"
@@ -116,18 +118,20 @@
                                 <i class="fab fa-facebook icon-size"></i></a></div>
                         <div class="social-bottom">
                             <!--The link is the current instagram address used by Balanced Training-->
+                            <div class="follow">Follow us on</div>
                             <a class="icon-link" href="https://instagram.com/balanced_training" target="_blank"
                                 title="Link to Instagram">
-                                <i class="fab fa-instagram icon-size"></i></a></div>
+                                <i class="fab fa-instagram icon-size"></i></a>
+                        </div>
                         <div class="social-bottom">
                             <!--The link is the current linkedin address used by Balanced Training-->
-                            <a class="icon-link" href="https://linkedin.com/company/balanced-training/"
-                                target="_blank" title="Link to Linked In">
+                            <a class="icon-link" href="https://linkedin.com/company/balanced-training/" target="_blank"
+                                title="Link to Linked In">
                                 <i class="fab fa-linkedin icon-size"></i></a></div>
-                            </div>
+                    </div>
+                </div>
             </div>
-        </div>
     </footer>
-    </body>
+</body>
 
-    </html>
+</html>
