--- a/milestone3/templates/clients.html
+++ b/milestone3/templates/clients.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="brown-text text-darken-4 center-align">Manage Clients</h3>
+    <h3 class="blue-grey-text text-darken-4 center-align">Manage Clients</h3>
 
     <div class="row">
         <div class="col s12 center-align">
-            <a href="{{ url_for('add_client') }}" class="btn-large brown darken-2 text-shadow">
+            <a href="{{ url_for('add_client') }}" class="btn-large deep-orange darken-2 text-shadow">
                 Add Client <i class="fas fa-plus-square right"></i>
             </a>
         </div>
