--- a/milestone3/templates/edit_client.html
+++ b/milestone3/templates/edit_client.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="brown-text text-darken-4 center-align">{{ user.fullname }} Records</h3>
+<h3 class="blue-grey-text text-darken-4 center-align">{{ user.fullname }} Records</h3>
 <div class="row card-panel grey lighten-5">
     <div class="col s12 m6">
 
         <form class="col s12" method="POST" action="{{ url_for('edit_client', user_id=user._id) }}">
           <div class="row hide">
             <div class="input-field col s12">
-                    <i class="fas fa-user prefix brown-text text-darken-4"></i>
+                    <i class="fas fa-user prefix blue-grey-text text-darken-4"></i>
                     <input id="username" name="username"
                         value="{{ user.username }}" class="validate" required>
                     <label for="username"></label>
@@ -16,7 +16,7 @@
           </div>
           <div class="row hide">
             <div class="input-field col s12">
-                    <i class="fas fa-user prefix brown-text text-darken-4"></i>
+                    <i class="fas fa-user prefix blue-grey-text text-darken-4"></i>
                     <input id="password" name="password"
                         value="{{ user.password }}" class="validate" required>
                     <label for="password"></label>
@@ -25,14 +25,14 @@
             <!-- client username -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-user-edit prefix brown-text text-darken-4"></i>
+                    <i class="fas fa-user-edit prefix blue-grey-text text-darken-4"></i>
                     <label class="editname">{{ user.username }}</label>
                 </div>
             </div>
             <!-- client name -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-user prefix brown-text text-darken-4"></i>
+                    <i class="fas fa-user prefix blue-grey-text text-darken-4"></i>
                     <input id="fullname" name="fullname" minlength="3" maxlength="25" type="text"
                         value="{{ user.fullname }}" class="validate" required>
                     <label for="fullname">Client Name</label>
@@ -41,7 +41,7 @@
             <!-- client DOB -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-calendar-alt prefix brown-text text-darken-4"></i>
+                    <i class="fas fa-calendar-alt prefix blue-grey-text text-darken-4"></i>
                     <input id="dob" name="dob" minlength="3" maxlength="25" type="text" value="{{ user.dob }}"
                         class="validate" required>
                     <label for="dob">Client Date of Birth</label>
@@ -50,7 +50,7 @@
             <!-- client Email -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-envelope prefix brown-text text-darken-4"></i>
+                    <i class="fas fa-envelope prefix blue-grey-text text-darken-4"></i>
                     <input id="email" name="email" minlength="3" maxlength="25" type="text" value="{{ user.email }}"
                         class="validate" required>
                     <label for="email">Client Email</label>
@@ -59,7 +59,7 @@
             <!-- client Phone -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-phone prefix brown-text text-darken-4"></i>
+                    <i class="fas fa-phone prefix blue-grey-text text-darken-4"></i>
                     <input id="phone" name="phone" minlength="3" maxlength="25" type="text" value="{{ user.phone }}"
                         class="validate" required>
                     <label for="phone">Client Phone</label>
@@ -71,7 +71,7 @@
                     <a href="{{ url_for('get_clients') }}" class="btn-large red text-shadow">
                         Cancel <i class="fas fa-times-circle right"></i>
                     </a>
-                    <button type="submit" class="btn-large brown darken-1 text-shadow">
+                    <button type="submit" class="btn-large blue-grey darken-1 text-shadow">
                         Edit Client <i class="fas fa-edit right"></i>
                     </button>
                 </div>
@@ -232,7 +232,7 @@
         <!-- {{ treatment.user_id }}  -->
         <!-- <h5>{{ user._id }} - user._id works {{ user.fullname }} - user.fullname works </h5> -->
         <li>
-            <div class="collapsible-header white-text brown darken-4 text-shadow">
+            <div class="collapsible-header white-text blue-grey darken-4 text-shadow">
                 <div class="col s3">
                     <i class="fas fa-caret-down"></i>
                 </div>
@@ -240,7 +240,7 @@
                     <strong class="larger"> {{ user.fullname }} {{ treatment.treatment_client }} - {{ treatment.treatment_name|capitalize }}</strong> : {{ treatment.treatment_date }}
                         
                     {% if treatment.follow_up == "on" %}
-                    <i class="fas fa-exclamation-circle brown-text text-lighten-2 tooltipped"
+                    <i class="fas fa-exclamation-circle blue-grey-text text-lighten-2 tooltipped"
                         data-position="right" data-tooltip="URGENT!"></i>
                     {% endif %}
                 </div>
