--- a/milestone3/templates/edit_treatment.html
+++ b/milestone3/templates/edit_treatment.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="brown-text text-darken-4 center-align">Edit Treatment</h3>
+    <h3 class="blue-grey-text text-darken-4 center-align">Edit Treatment</h3>
 
     <div class="row card-panel grey lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('edit_treatment', treatment_id=treatment._id) }}">
             <!-- treatment client -->
             <div class="row hide">
                 <div class="input-field col s12">
-                    <i class="fas fa-pencil-alt prefix brown-text text-darken-4"></i>
+                    <i class="fas fa-pencil-alt prefix blue-grey-text text-darken-4"></i>
                     <input id="user_id" name="user_id" maxlength="50"
                         type="text" class="validate" value="{{ treatment.user_id }}">
                     <label for="user_id">Treatment Client Name</label>
@@ -17,7 +17,7 @@
             <!-- treatment name -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-pencil-alt prefix brown-text text-darken-4"></i>
+                    <i class="fas fa-pencil-alt prefix blue-grey-text text-darken-4"></i>
                     <input id="treatment_name" name="treatment_name" maxlength="50"
                         type="text" class="validate" value="{{ treatment.treatment_name }}">
                     <label for="treatment_name">Treatment Area</label>
@@ -26,7 +26,7 @@
             <!-- treatment subjective history -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-history prefix brown-text text-darken-4"></i>
+                    <i class="fas fa-history prefix blue-grey-text text-darken-4"></i>
                     <input id="treatment_subjective" name="treatment_subjective"
                         maxlength="200" type="text" class="materialize-textarea validate" 
                         value="{{ treatment.treatment_subjective }}"></input>
@@ -37,7 +37,7 @@
             <!-- treatment observation -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-eye prefix brown-text text-darken-4"></i>
+                    <i class="fas fa-eye prefix blue-grey-text text-darken-4"></i>
                     <textarea id="treatment_observation" name="treatment_observation"
                         maxlength="200" class="materialize-textarea validate">{{ treatment.treatment_observation }}</textarea>
                     <label for="treatment_observation">Observations</label>
@@ -47,7 +47,7 @@
             <!-- Treatment Range of Movement -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-drafting-compass prefix brown-text text-darken-4"></i>
+                    <i class="fas fa-drafting-compass prefix blue-grey-text text-darken-4"></i>
                     <textarea id="treatment_rom" name="treatment_rom" 
                     maxlength="200" class="materialize-textarea validate">{{ treatment.treatment_rom }}</textarea>
                     <label for="treatment_rom">Range of Movement</label>
@@ -57,7 +57,7 @@
             <!-- treatment treatment_special_tests -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-vial prefix brown-text text-darken-4"></i>
+                    <i class="fas fa-vial prefix blue-grey-text text-darken-4"></i>
                     <textarea id="treatment_special_tests" name="treatment_special_tests" 
                     maxlength="200" class="materialize-textarea validate">{{ treatment.treatment_special_tests }}</textarea>
                     <label for="treatment_special_tests">Special/Functional Tests</label>
@@ -67,7 +67,7 @@
             <!-- treatment Palpation -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-hands prefix brown-text text-darken-4"></i>
+                    <i class="fas fa-hands prefix blue-grey-text text-darken-4"></i>
                     <textarea id="treatment_palpation" name="treatment_palpation"
                         maxlength="200" class="materialize-textarea validate">{{ treatment.treatment_palpation }}</textarea>
                     <label for="treatment_palpation">Palpation</label>
@@ -76,7 +76,7 @@
             <!-- Date of treatment picker -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-calendar-alt prefix brown-text text-darken-4"></i>
+                    <i class="fas fa-calendar-alt prefix blue-grey-text text-darken-4"></i>
                     <input id="treatment_date" name="treatment_date" type="text" class="datepicker validate" value="{{ treatment.treatment_date }}">
                     <label for="treatment_date">Treatment Date</label>
                 </div>
@@ -85,7 +85,7 @@
 			<div class="row">
 				<div class="input-field col s12">
 					<div class="switch">
-                        <i class="fas fa-exclamation-circle prefix brown-text text-darken-4"></i>
+                        <i class="fas fa-exclamation-circle prefix blue-grey-text text-darken-4"></i>
 						<label for="follow_up">
                             {% if treatment.follow_up == "on" %}
                                 <input type="checkbox" id="follow_up" name="follow_up" checked>
@@ -105,7 +105,7 @@
                     <a href="{{ url_for('get_treatments') }}" class="btn-large red text-shadow">
                         Cancel <i class="fas fa-times-circle right"></i>
                     </a>
-                    <button type="submit" class="btn-large brown darken-1 text-shadow">
+                    <button type="submit" class="btn-large blue-grey darken-1 text-shadow">
                         Edit Treatment <i class="fas fa-edit right"></i>
                     </button>
                 </div>
