--- a/milestone3/templates/register.html
+++ b/milestone3/templates/register.html
@@ -9,7 +9,7 @@
                 <!-- Username -->
                 <div class="row">
 					<div class="input-field col s12">
-						<i class="fas fa-user-plus prefix brown-text text-darken-4"></i>
+						<i class="fas fa-user-plus prefix blue-grey-text text-darken-4"></i>
 						<input id="username" name="username" type="text" minlength="5"
                             maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
 						<label for="username">Username</label>
@@ -19,7 +19,7 @@
                 <!-- Full Name -->
                 <div class="row">
 					<div class="input-field col s12">
-						<i class="fas fa-user-plus prefix brown-text text-darken-4"></i>
+						<i class="fas fa-user-plus prefix blue-grey-text text-darken-4"></i>
 						<input id="fullname" name="fullname" type="text" minlength="5"
                             maxlength="35" class="validate" onchange="removeSpaces()" required>
 						<label for="fullname">Full name</label>
@@ -28,7 +28,7 @@
                 <!-- client Date of Birth -->
                 <div class="row">
                     <div class="input-field col s12">
-                        <i class="fas fa-folder-open prefix brown-text text-darken-4"></i>
+                        <i class="fas fa-folder-open prefix blue-grey-text text-darken-4"></i>
                         <input id="dob" name="dob" minlength="3" maxlength="25"
                             type="date" class="validate" required>
                         <label for="dob">Date of Birth</label>
@@ -37,7 +37,7 @@
                 <!-- client email -->
               <div class="row">
                   <div class="input-field col s12">
-                      <i class="fas fa-folder-open prefix brown-text text-darken-4"></i>
+                      <i class="fas fa-folder-open prefix blue-grey-text text-darken-4"></i>
                         <input id="email" name="email" minlength="3" maxlength="50"
                             type="email" class="validate" required>
                         <label for="email">Email</label>
@@ -46,7 +46,7 @@
                <!-- client phone number -->
                 <div class="row">
                    <div class="input-field col s12">
-                       <i class="fas fa-folder-open prefix brown-text text-darken-4"></i>
+                       <i class="fas fa-folder-open prefix blue-grey-text text-darken-4"></i>
                        <input id="phone" name="phone" minlength="5" maxlength="15"
                        pattern="^[0-9]{5,15}$" type="text" class="validate" required>
                        <label for="phone">Phone Number</label>
@@ -55,7 +55,7 @@
                 <!-- passowrd -->
                 <div class="row">
                     <div class="input-field col s12">
-						<i class="fas fa-user-lock prefix brown-text text-darken-4"></i>
+						<i class="fas fa-user-lock prefix blue-grey-text text-darken-4"></i>
                         <input id="password" name="password" type="password" minlength="5"
                             maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="password">Password</label>
@@ -63,7 +63,7 @@
                 </div>
                 <!-- register -->
                 <div class="row">
-                    <button type="submit" class="col s12 btn-large brown darken-4 text-shadow">
+                    <button type="submit" class="col s12 btn-large blue-grey darken-4 text-shadow">
                         Register <i class="fas fa-sign-in-alt"></i>
                     </button>
                 </div>
@@ -75,7 +75,7 @@
         <div class="col s12">
             <p class="center-align">
                 Already Registered?
-                <a href="{{ url_for('login') }}" class="brown-text text-darken-4">Log In</a>
+                <a href="{{ url_for('login') }}" class="blue-grey-text text-darken-4">Log In</a>
             </p>
         </div>
     </div>
