--- a/milestone3/templates/treatments.html
+++ b/milestone3/templates/treatments.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
-    <h3 class="brown-text text-darken-4 center-align">Treatments</h3>
+    <h3 class="blue-grey-text text-darken-4 center-align">Treatments</h3>
     {% if session["user"] == "gadmin" %}
-    <div class="row card-panel grey lighten-5">
+    <div class="row card-panel grey lighten-4">
         <form action="{{ url_for('search') }}" method="post" class="col s12">
             <div class="row valign-wrapper center-align">
                 <div class="input-field col s12 m8">
-                    <i class="fas fa-search prefix brown-text text-darken-4"></i>
+                    <i class="fas fa-search prefix blue-grey-text text-darken-4"></i>
                     <input type="text" name="query" id="query" minlength="3" class="validate" required>
                     <label class="searchlabel" for="query">Search Treatments</label>
                 </div>
                 <div class="col s12 m4">
                     <a href="{{ url_for('get_treatments') }}" class="red btn text-shadow reseter">Reset</a>
-                    <button type="submit" class="brown darken-1 btn text-shadow reseter gap">
+                    <button type="submit" class="blue-grey darken-3 btn text-shadow reseter gap">
                         Search
                     </button>
                 </div>
@@ -26,12 +26,12 @@
     {% for treatment in treatments %}
         {% if treatment.user_id|lower == session["user"] or session["user"] == "gadmin" %}         
             <li>
-            <div class="collapsible-header white-text brown darken-4 text-shadow">
+            <div class="collapsible-header white-text blue-grey darken-4 text-shadow">
                 <div class="col s3">
                     <i class="fas fa-caret-down"></i>
                     {% if session.user|lower == treatment.created_by|lower %}
                     <a href="{{ url_for('edit_treatment', treatment_id=treatment._id) }}" class="btn-small green lighten-1 edit">Edit</a>
-                    <a href="{{ url_for('delete_treatment', treatment_id=treatment._id) }}" class="btn-small red lighten-1 delete">Delete</a>
+                    <!-- <a href="{{ url_for('delete_treatment', treatment_id=treatment._id) }}" class="btn-small red lighten-1 delete">Delete</a> -->
                     {% endif %}
                 </div>
                 <div class="col s9"> 
@@ -54,7 +54,7 @@
                         
 
                     {% if treatment.follow_up == "on" %}
-                    <i class="fas fa-exclamation-circle brown-text text-lighten-2 tooltipped"
+                    <i class="fas fa-exclamation-circle blue-grey-text text-lighten-2 tooltipped"
                         data-position="right" data-tooltip="URGENT!"></i>
                     {% endif %}
                     
