--- a/milestone3/templates/home.html
+++ b/milestone3/templates/home.html
@@ -64,54 +64,52 @@
       out in the office upstairs but is on hand for a stroke or to eat a treat.</p>
     </div>
   </div>
-
-
-  <div class="stepTitle center-align">Where are we?</div>
-
-  <div class="mapouter"><div class="gmap_canvas"><iframe width="100%" height="280" id="gmap_canvas" src="https://maps.google.com/maps?q=balanced%20training%20ss39qy&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://2piratebay.org"></a><br><style>.mapouter{position:relative;text-align:right;height:275px;width:100%;}</style><a href="https://www.embedgooglemap.net">google map for websites</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:275px;width:100%;}</style></div></div>
-
       <!--Opening Times-->
       <div class="container-fluid map-opening">
         <div class="row">
           <div class="col-12 col-md-4 text-center opening">
-              <p class="opening-time">
-                    Treatment Availability Hours
+              <p class="opening-time stepTitle">
+                    Treatment Availability
               </p>
-            <table>
+            <table class="opening">
               <tr>
                 <td class="day">Monday</td>
-                <td>09:00 - 19:00</td>
+                <td class="times">09:00 - 19:00</td>
               </tr>
               <tr>
                 <td class="day">Tuesday</td>
-                <td>09:00 - 19:00</td>
+                <td class="times">09:00 - 19:00</td>
               </tr>
               <tr>
                 <td class="day">Wednesday</td>
-                <td>09:00 - 19:00</td>
+                <td class="times">09:00 - 19:00</td>
               </tr>
               <tr>
                 <td class="day">Thursday</td>
-                <td>09:00 - 19:00</td>
+                <td class="times">09:00 - 19:00</td>
               </tr>
               <tr>
                 <td class="day">Friday</td>
-                <td>09:00 - 12:00</td>
+                <td class="times">09:00 - 12:00</td>
               </tr>
               <tr>
                 <td class="day">Saturday</td>
-                <td>Unavailable</td>
+                <td class="times">Unavailable</td>
               </tr>
               <tr>
                 <td class="day">Sunday</td>
-                <td>Unavailable</td>
+                <td class="times">Unavailable</td>
               </tr>
             </table>
-            <p class="opening-message">Although open for use during these times we use a booking system to stop the studio getting too busy. So please book or contact us before you come to the gym.</p>
-          </div>
+            </div>
         </div>
       </div>
       
+  <div class="stepTitle center-align">Where are we?</div>
+
+  <div class="mapouter"><div class="gmap_canvas"><iframe width="100%" height="280" id="gmap_canvas" src="https://maps.google.com/maps?q=balanced%20training%20ss39qy&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://2piratebay.org"></a><br><style>.mapouter{position:relative;text-align:right;height:275px;width:100%;}</style><a href="https://www.embedgooglemap.net">google map for websites</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:275px;width:100%;}</style></div></div>
+<br>
+
     </section>
 
   {% endblock %}
