--- a/milestone3/templates/home.html
+++ b/milestone3/templates/home.html
@@ -107,15 +107,20 @@
       
   <div class="stepTitle center-align">Where are we?</div>
 
-  <div class="mapouter"><div class="gmap_canvas"><iframe width="100%" height="280" id="gmap_canvas" src="https://maps.google.com/maps?q=balanced%20training%20ss39qy&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://2piratebay.org"></a><br><style>.mapouter{position:relative;text-align:right;height:275px;width:100%;}</style><a href="https://www.embedgooglemap.net">google map for websites</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:275px;width:100%;}</style></div></div>
+  <div class="mapouter">
+    <div class="gmap_canvas">
+      <iframe width="100%" height="280" id="gmap_canvas" src="https://maps.google.com/maps?q=balanced%20training%20ss39qy&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" marginheight="0" marginwidth="0">
+      </iframe></div></div>
 <br>
+
+<div class="stepTitle center-align">Contact Us</div>
 <div class="row">
-  <div class="col s12 m5">
+  <div class="col s12">
     <div class="card-panel light-grey">
 <form id="form">
   <div class="field">
     <label for="from_name">Name</label>
-    <input type="text" name="from_name" id="from_name">
+    <input type="text" name="from_name" id="from_name" required>
   </div>
   <div class="field">
     <label for="contact_number">Phone Number</label>
@@ -123,13 +128,13 @@
   </div>
   <div class="field">
     <label for="reply_to">Email Address</label>
-    <input type="email" name="reply_to" id="reply_to">
+    <input type="email" name="reply_to" id="reply_to" required>
   </div>
   <div class="field">
-    <textarea type="text" name="message" id="message" >Message</textarea>
     <label for="message">Message:</label>
+    <textarea type="text" name="message" id="message" required></textarea>
   </div>
-  <input type="submit" id="button" value="Send Email" onclick="SendMail()">
+  <input class="btn-large blue darken-4 center" type="submit" id="buttonsm" value="Send Email" onclick="SendMail()">
 </form>
 </div>
 </div>
