--- a/milestone3/templates/base.html
+++ b/milestone3/templates/base.html
@@ -101,7 +101,7 @@
         <div class="footer-new">
             <div class="row">
                 <!--Footer Left-->
-                <div class="footer-left col s6 ">
+                <div class="footer-left col ">
                     <!--The link is the geographical address on google maps used by Balanced Training-->
                     <a id="" class="left"
                         href="https://maps.google.com/maps/dir//Balanced+Training+Unit+A3,+Seedbed+Business+Centre+Vanguard+Way+Southend-on-Sea+SS3+9QY/@51.534883,0.7957074,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x47d927b7c1b1e26d:0x8d658dbbe5f7866"
@@ -115,7 +115,7 @@
                     <p class="telephone" ><i class="fas fa-phone"></i><a class="phone-text" href="Tel:01702382390"> 01702 382390</a></p>
                 </div>
                 <!--Footer Right-->
-                <div class="col s6 format">
+                <div class="col format">
                     <div class="footer-text-right">
 
                         <div class="social-bottom">
