--- a/milestone3/templates/add_treatment.html
+++ b/milestone3/templates/add_treatment.html
@@ -132,7 +132,7 @@
             <!-- submit button -->
             <div class="row">
                 <div class="col s12 center-align">
-                    <button id="addButton" type="submit" class="btn-large blue-grey darken-1 text-shadow">
+                    <button id="addButton" type="submit" class="btn-large deep-orange darken-4 text-shadow">
                         Add Treatment <i class="fas fa-plus-square right"></i>
                     </button>
                 </div>
