--- a/milestone3/templates/clients.html
+++ b/milestone3/templates/clients.html
@@ -5,7 +5,7 @@
 
     <div class="row">
         <div class="col s12 center-align">
-            <a href="{{ url_for('add_client') }}" class="btn-large deep-orange darken-2 text-shadow">
+            <a href="{{ url_for('add_client') }}" class="btn-large deep-orange darken-4 text-shadow">
                 Add Client <i class="fas fa-plus-square right"></i>
             </a>
         </div>
@@ -14,7 +14,7 @@
             {% for user in users %}
             {% if user.username != "gadmin" %}
             <div class="col s12 m4">
-                <div class="card brown darken-4 text-shadow center-align">
+                <div class="card blue-grey darken-4 text-shadow center-align">
                     <div class="card-content white-text">
                         <span class="card-title">{{ user.fullname }}</span>
                     </div>
