--- a/milestone3/templates/treatments.html
+++ b/milestone3/templates/treatments.html
@@ -7,7 +7,7 @@
             <div class="row valign-wrapper center-align">
                 <div class="input-field col s12 m8">
                     <i class="fas fa-search prefix blue-grey-text text-darken-4"></i>
-                    <input type="text" name="query" id="query" minlength="3" class="validate" required>
+                    <input type="text" name="query" id="query" minlength="3" class="validate" placeholder="{{ old_query }}" required>
                     <label class="searchlabel" for="query">Search Treatments</label>
                 </div>
                 <div class="col s12 m4">
@@ -39,7 +39,7 @@
                     <strong class="larger"> 
                         {% for user in users %}
                             {% if treatment.user_id|lower == user.username|lower %}        
-                                {{ user.fullname }} 
+                                {{ user.fullname }}
                             {% endif %}
                         {% endfor %} - {{ treatment.treatment_name|capitalize }} </strong> : {{ treatment.treatment_date }} 
                     {% if treatment.follow_up == "on" %}
