--- a/milestone3/templates/home.html
+++ b/milestone3/templates/home.html
@@ -16,7 +16,7 @@
 
       </div> -->
     <div id="bannersm" class="row">
-      <div><img class="bannersm center-align" src="../static/images/frontPageBanner.jpg" alt="Sports Therapy Picture"></div>
+      <div><img class="bannersm center-align" src="../static/images/frontPageBanner.webp" alt="Sports Therapy Picture"></div>
     </div>
 
 
@@ -24,14 +24,14 @@
     <div class="col s12 stepTitle center-align">How it works</div>
     <div class="grid-example col s12 m6 l4 center-align">
       <a href="{{ url_for('register') }}">
-        <img class="steps" src="../static/images/1.jpg" alt="Step 1 Book Appointment">
+        <img class="steps" src="../static/images/1.webp" alt="Step 1 Book Appointment">
       </a>
     </div>
     <div class="grid-example col s12 m6 l4 center-align">
-      <img class="steps" src="../static/images/2.jpg" alt="Step 2 Attend Appointment">
+      <img class="steps" src="../static/images/2.webp" alt="Step 2 Attend Appointment">
     </div>
     <div class="grid-example col s12 m6 l4 center-align">
-      <img class="steps" src="../static/images/3.jpg" alt="Step 3 Personalised Rehab plan">
+      <img class="steps" src="../static/images/3.webp" alt="Step 3 Personalised Rehab plan">
     </div>
   </div>
 
@@ -41,7 +41,7 @@
   <div class="row">
     <div class="col s12 m6 l4 center">
       <!--The image used has been supplied by Balanced Training-->
-      <img class="profilepic" src="../static/images/sarah-sm-elb.jpg" alt="Sarah Profile pic">
+      <img class="profilepic" src="../static/images/sarah-sm-elb.webp" alt="Sarah Profile pic">
       <h4 class="therapists"> <strong>Sarah Goodrem</strong><br> Head Sports Therapist & PT</h4>
       <p>Being a Sports Therapist and Personal trainer gives Sarah an insight into how to both,
          work on an injury and help the healing process and work round the problem to help you achieve 
@@ -50,14 +50,14 @@
     </div>
     <div class="col s12 m6 l4 center">
       <!--The image used has been supplied by Balanced Training-->
-      <img class="profilepic" src="../static/images/ross-spoons.jpg" alt="Greg Profile pic">
+      <img class="profilepic" src="../static/images/ross-spoons.webp" alt="Greg Profile pic">
       <h4 class="therapists"> <strong>Greg Goodrem</strong><br> Trainee Massage Therapist & PT</h4>
       <p class="center">Having delivered THOUSANDS of hours of personal training since starting in 2005, Greg can 
         help you slowly return to sport and exercise after your treatment.</p>
     </div>
     <div class="col s12 m6 l4 center">
       <!--The image used has been supplied by Balanced Training-->
-      <img class="profilepic" src="../static/images/max-outside.jpg" alt="Max profile pic">
+      <img class="profilepic" src="../static/images/max-outside.webp" alt="Max profile pic">
       <h4 class="therapists"> <strong> Maximus Goodrem</strong> <br>Emotional Support</h4>
       <p>This little guy is an integral part of our team always brings a smile to 
         your face whenever he comes through the gym door carrying a ball. He usually likes to chill
