--- a/milestone3/templates/home.html
+++ b/milestone3/templates/home.html
@@ -141,4 +141,5 @@
 </div>
     </section>
 
+    <script type="text/javascript" src="{{ url_for('static', filename='js/email.js') }}"></script>
   {% endblock %}
