--- a/milestone3/static/css/style.css
+++ b/milestone3/static/css/style.css
@@ -104,7 +104,7 @@ label.editname {
 }
 
 .antpos {
-    background-image: url(../images/antpos.png) ;
+    background-image: url(../images/antpos.webp) ;
     background-position: center; 
     background-repeat: no-repeat; 
     background-size: cover;
@@ -218,7 +218,7 @@ img.profilepic {
     color: rgb(255, 255, 255);
     padding-top: 20px;
     margin: 0 4vw;
-    font-size: 35px;
+    font-size: 40px;
 }
 
 .footer-text-right {
@@ -245,7 +245,7 @@ img.profilepic {
 
 footer {
     width: 100%;
-    background-color: darkblue;
+    background-color: rgb(0, 0, 95);
     height: 110px;
     bottom: 0;
     line-height: 1px;
@@ -281,6 +281,7 @@ p.telephone {
     width: 100%;
     height: 20px;
     left: 50%;
+    font-size: 16px;
     transform: translateX(15%);
 }
 
@@ -299,6 +300,7 @@ body {
 
 .phone-text {
     color: #fff;
+    font-size: 14px;
 }
 
 @media screen and (min-width: 600px) and (max-width: 993px) {
@@ -336,6 +338,9 @@ table.opening {
 
 .btn-large {
     border-radius: 10px;
+}
+.btn {
+    border-radius: 5px;
 }
 
 textarea#message {
@@ -379,10 +384,14 @@ a.btn.right {
     line-height: 16px;
     height: auto;
     max-width: 200px;
-    border-radius: 5px;
 }
 
 #query::placeholder {
     color: cadetblue;
     
+}
+
+a.btn.records {
+    width: 103px;
+    margin: 5px;
 }
