--- a/milestone3/templates/add_client.html
+++ b/milestone3/templates/add_client.html
@@ -57,7 +57,7 @@
                     <div class="input-field col s12">
 						<i class="fas fa-user-lock prefix blue-grey-text text-darken-4"></i>
                         <input id="password" name="password" type="password" minlength="5"
-                            maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                            maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" autocomplete="off" required>
                         <label for="password">Password</label>
                     </div>
                 </div>
@@ -70,6 +70,4 @@
             </div>
         </form>
     </div>
-   
-<script src="{{ url_for('static', filename='js/script_fullname.js') }}"></script>
 {% endblock %}
