--- a/milestone3/templates/add_treatment.html
+++ b/milestone3/templates/add_treatment.html
@@ -13,33 +13,15 @@
                     <option value="" disabled selected>Choose Client</option>
                     {% for user in users %}
                     {% if user.username == "gadmin" %}
-                       
+                    
                     {% else %}
-                        <option value="{{ user.username }}"> {{ user.fullname }} - ({{ user.username }})</option>
+                    <option value="{{ user.username }}"> {{ user.fullname }} - ({{ user.username }})</option>
                     {% endif %}
                     {% endfor %}
                 </select>
-                <label for="user_id">Client</label>
+                <label for="user_id" title="Client Drop down box">Client</label>
                 </div>
 			</div>
-             <!-- treatment client
-             <div class="row hide">
-                <div class="input-field col s12">
-                    <i class="fas fa-pencil-alt prefix blue-grey-text text-darken-4"></i>
-                    <input id="treatment_client" name="treatment_client" minlength="5" maxlength="50"
-                        type="text" class="validate">
-                    <label for="treatment_client">Treatment Client Name</label>
-                </div>
-            </div>
-            treatment client -->
-            <!-- <div class="row hide">
-                <div class="input-field col s12">
-                    <i class="fas fa-pencil-alt prefix blue-grey-text text-darken-4"></i>
-                    <input id="tusername" name="tusername" minlength="5" maxlength="50"
-                        type="text" class="validate">
-                    <label for="tusername">Treatment Client Username</label>
-                </div>
-            </div> -->
             <!-- treatment type -->
             <div class="row">
                 <div class="input-field col s12">
