--- a/milestone3/templates/clients.html
+++ b/milestone3/templates/clients.html
@@ -19,8 +19,8 @@
                         <span class="card-title">{{ user.fullname }}</span>
                     </div>
                     <div class="card-action">
-                        <a href="{{ url_for('edit_client', user_id=user._id ) }}" class="btn green accent-4">Records</a>
-                        <a href="{{ url_for('delete_client', user_id=user.username ) }}" class="btn red lighten-1">Delete</a>
+                        <a href="{{ url_for('edit_client', user_id=user._id ) }}" class="btn green darken-3 records">Records</a>
+                        <a href="{{ url_for('delete_client', user_id=user.username ) }}" class="btn red darken-2 records">Delete</a>
                     </div>
                 </div>
             </div>
