--- a/milestone3/templates/clients.html
+++ b/milestone3/templates/clients.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 
+<script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.6.1.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+
     <h3 class="blue-grey-text text-darken-4 center-align">Manage Clients</h3>
 
     <div class="row">
@@ -20,7 +23,25 @@
                     </div>
                     <div class="card-action">
                         <a href="{{ url_for('edit_client', user_id=user._id ) }}" class="btn green darken-3 records">Records</a>
-                        <a href="{{ url_for('delete_client', user_id=user.username ) }}" class="btn red darken-2 records">Delete</a>
+
+                    <!-- Modal Trigger -->
+                    <a class=" modal-trigger btn red darken-2 records" href="#modal1">Delete</a>
+
+                    <!-- Modal Structure -->
+                    <div id="modal1" class="modal">
+                      <div class="modal-content center-align">
+                        <h4>Deleting Client</h4>
+                        <p>All treatments relating to this Client will also be deleted permanently, this information can not be restored if you choose to delete.</p>
+                      </div>
+                      <div class="modal-footer">
+                        <a href="" class="modal-close btn green darken-3 records">Cancel</a>
+                        <a href="{{ url_for('delete_client', user_id=user.username ) }}" class="modal-close btn red darken-2 records">Delete</a>
+                      </div>
+                    </div>
+  
+
+
+                        <!-- <a href="{{ url_for('delete_client', user_id=user.username ) }}" class="btn red darken-2 records">Delete</a> -->
                     </div>
                 </div>
             </div>
