--- a/milestone3/templates/edit_client.html
+++ b/milestone3/templates/edit_client.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 
+<script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.6.1.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+
 <h3 class="blue-grey-text text-darken-4 center-align">{{ user.fullname }} Records</h3>
 <div class="row card-panel grey lighten-5">
     <div class="col s12 m6">
@@ -247,7 +250,24 @@
                 <div class="col s2">
                   {% if session.user|lower == treatment.created_by|lower %}
                   <a href="{{ url_for('edit_treatment', treatment_id=treatment._id) }}" class="btn-small green lighten-1 edit eddel">Edit</a>
-                  <a href="{{ url_for('delete_treatment', treatment_id=treatment._id) }}" class="btn-small red lighten-1 edit eddel">Delete</a>
+
+                    <!-- Modal Trigger -->
+                  <a class=" modal-trigger btn-small red lighten-1 edit eddel" href="#modal1">Delete</a>
+
+                  <!-- Modal Structure -->
+                  <div id="modal1" class="modal">
+                    <div class="modal-content blue-grey-text center-align">
+                      <h4>Deleting Treatment</h4>
+                      <p>The treatment information can not be restored if you choose to delete.</p>
+                    </div>
+                    <div class="modal-footer">
+                      <a href="" class="modal-close waves-effect btn-flat btn-small green lighten-1 edit eddel">Cancel</a>
+                      <a href="{{ url_for('delete_treatment', treatment_id=treatment._id) }}" class="modal-close waves-effect btn-flat btn-small red lighten-1 edit eddel">Delete</a>
+                    </div>
+                  </div>
+
+
+                  <!-- <a href="{{ url_for('delete_treatment', treatment_id=treatment._id) }}" class="btn-small red lighten-1 edit eddel">Delete</a> -->
                   {% endif %}
               </div>
             </div>
